--- a/test-upload.html
+++ b/test-upload.html
@@ -612,7 +612,7 @@
                 const formData = new FormData();
                 formData.append('image', file);
                 try {
-                    const res = await fetch('http://localhost:3000/upload', {
+                    const res = await fetch('http://kishan.x02.me/upload', {
                         method: 'POST',
                         headers: {
                             'Authorization': 'd24e80c32702e55a958ba59ffbc759ac'
